# 3dtools

./: .buildinfo  LICENSE  README.md  api.html  api.mirrorobj.html  api.stl2obj.html  api.vtp2stl.html  credit.html  decimate.py  dependencies.html  exercises.html  genindex.html  index.html  mirrorobj.html  mirrorobj.py  modules.html  objects.inv  purpose.html  py-modindex.html  py3dtools.html  pyproject.toml  search.html  searchindex.js  stl2obj.html  stl2obj.py  stl2obj.stats  test.py  test.stl  usage.html  vtp2stl.html  vtp2stl.py
.doctrees/: api.doctree  api.mirrorobj.doctree  api.stl2obj.doctree  api.vtp2stl.doctree  credit.doctree  dependencies.doctree  environment.pickle  exercises.doctree  index.doctree  mirrorobj.doctree  modules.doctree  purpose.doctree  py3dtools.doctree  stl2obj.doctree  usage.doctree  vtp2stl.doctree
.github/workflows/: documentation.yml
_sources/: api.mirrorobj.rst.txt  credit.rst.txt  dependencies.rst.txt  index.rst.txt  modules.rst.txt  purpose.rst.txt  py3dtools.rst.txt  stl2obj.rst.txt
api/mirrorobj/: mirrorobj.py
api/stl2obj/: stl2obj.py
api/vtp2stl/: vtp2stl.py
doc/: api.rst  conf.py  index.rst  mirrorobj.rst  py3dtools.rst  stl2obj.rst  vtp2stl.rst
doc/source/: conf.py  index.rst
py3dtools/: pyproject.toml
py3dtools/mirrorobj/: mirrorobj.py
py3dtools/stl2obj/: stl2obj.py
py3dtools/vtp2stl/: vtp2stl.py
test/: block.stl  test.py
